2009-05-24  Miguel de Icaza  <miguel@novell.com>

	* Disable mono/docs build if we disabled the mcs build.

2009-05-24  Zoltan Varga  <vargaz@gmail.com>

	* */CMakeLists.txt: Add beginnings of a cmake based build system.

2009-05-22  Zoltan Varga  <vargaz@gmail.com>

	* acinclude.m4 (dolt_supported): Enable dolt on sparc linux.

2009-05-17  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add TARGET_POWERPC/POWERPC64 defines.

2009-05-09  Miguel de Icaza  <miguel@novell.com>

	* configure.in: Instead of reporting the various disabled features
	in a loop, where a keyword might fail, report the actual disabled
	features in the sections that handle them

2009-05-08  Zoltan Varga  <vargaz@gmail.com>

	* acinclude.m4 (dolt_supported): Add powerpc64.

2009-05-07  Rodrigo Kumpera  <rkumpera@novell.com>

	* runtime/Makefile.am (mcs-compileall): Pass --security=validil
	to the runtime so the assemblies are not required to be verifiable.

2009-05-06  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile.am (compiler-tests): Rewrite to re-build the moon
	assemblies after mcs/ is built.
	* runtime/Makefile.am (build_profiles) [INSTALL_2_1]: Build only
	the net_2_1_raw profile.
	(test_profiles): New.  Mention net_2_1 profile.
	(moon-do-build): New.

2009-05-05  Miguel de Icaza  <miguel@novell.com>

	* configure.in: Fix the bug reported on the mailing list by
	Koushik K Dutta: do not build docs when --disable-mcs-builds is
	passed. 

2009-05-05  Miguel de Icaza  <miguel@novell.com>

	* configure.in: Reduce configure-time dependencies by using
	pkg-config the way it was originally intended to be used, and not
	with the incredibly lame and painful inducing pkg.m4 file. 

	I am on a quest to remove this gratuitous dep on pkg.m4 that is
	making people's lives miserable around the globe, just because
	someone can not be bothered to learn the shell if construct.

2009-04-28  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add an option to disable the solaris tar check.
	