@@ -2098,6 +2098,12 @@ if(host MATCHES "(x86_64-.*-.*)|(amd64-.*-.*)")
   set(arch_target amd64)
   set(JIT_SUPPORTED yes)
   set(jit_wanted true)
+elseif(host MATCHES "arm.*-linux.*")
+  set(TARGET ARM)
+  set(arch_target arm)
+  set(ACCESS_UNALIGNED no)
+  set(JIT_SUPPORTED yes)
+  set(jit_wanted true)
 else()
   message(FATAL_ERROR "Host ${host} not yet supported by the cmake build.")
 endif()
@@ -2255,13 +2261,6 @@ endif()
 ###		set(ACCESS_UNALIGNED "no")
 ###		set(JIT_SUPPORTED yes)
 ###		set(CPPFLAGS "$CPPFLAGS -DARM_FPU_NONE=1")
-###		set(jit_wanted true)
-###		;;
-###	arm*-linux*)
-###		set(TARGET ARM;)
-###		set(arch_target arm;)
-###		set(ACCESS_UNALIGNED "no")
-###		set(JIT_SUPPORTED yes)
 ###		set(jit_wanted true)
 ###		;;
 ###	s390-*-linux*)
